# fieldz

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  pyproject.toml  x.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
src/dataclass_compat/: __init__.py  _compat.py  _functions.py  _repr.py  _types.py
src/dataclass_compat/adapters/: __init__.py  _attrs.py  _dataclasses.py  _dataclassy.py  _msgspec.py  _named_tuple.py  _pydantic.py  protocol.py
src/fieldz/: __init__.py  _functions.py  _repr.py  _types.py
src/fieldz/adapters/: __init__.py  _attrs.py  _dataclasses.py  _dataclassy.py  _msgspec.py  _named_tuple.py  _pydantic.py  _typed_dict.py  protocol.py
tests/: test_annotations.py  test_dataclass_compat.py  test_fieldz.py  test_pydantic.py  test_repr.py
