# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://hatch.pypa.io/latest/config/metadata/
[tool.hatch.version]
source = "vcs"

# https://peps.python.org/pep-0621/
[project]
name = "fieldz"
dynamic = ["version"]
description = "Utilities for providing compatibility with many dataclass-like libraries"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Talley Lambert", email = "talley.lambert@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: BSD License",
    "Typing :: Typed",
]
dependencies = ["typing-extensions>=4.10.0"]


[project.urls]
homepage = "https://github.com/pyapp-kit/fieldz"
repository = "https://github.com/pyapp-kit/fieldz"

[dependency-groups]
test = [
    "annotated-types>=0.6.0",
    "attrs>=23.2.0",
    "dataclassy>=1.0.1",
    "msgspec>=0.18.0",
    "pydantic>=2.6.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
dev = [
    { include-group = "test" },
    "ipython>=8.38.0",
    "mypy>=1.19.1",
    "pdbpp>=0.12.1 ; sys_platform != 'win32'",
    "prek>=0.3.3",
    "rich>=14.3.3",
    "ruff>=0.15.2",
]

[tool.uv.sources]
fieldz = { workspace = true }

# https://docs.astral.sh/ruff
[tool.ruff]
line-length = 88
target-version = "py310"
fix = true
unsafe-fixes = true

[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "D",    # pydocstyle
    "D417", # Missing argument descriptions in the docstring
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
    "TC",   # typecheck
    "TID",  # tidy imports
]
ignore = [
    "D100", # Missing docstring in public module
    "D401", # First line should be in imperative mood
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "S", "RUF009"]
"setup.py" = ["D"]

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
files = "src/**/"
strict = true
disallow_any_generics = false
disallow_subclassing_any = false
show_error_codes = true
pretty = true

# https://docs.pytest.org/en/6.2.x/customize.html
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
filterwarnings = ["error"]

# https://coverage.readthedocs.io/en/6.4/config.html
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "except ImportError",
    "\\.\\.\\.",
    "raise NotImplementedError()",
]
show_missing = true

[tool.coverage.run]
source = ["fieldz"]

# https://github.com/mgedmin/check-manifest#configuration
[tool.check-manifest]
ignore = [".pre-commit-config.yaml", "tests/**/*"]
